--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -7,6 +7,17 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 */
 
+/* Cuadro */
+
+
+  .image.cuadro img {
+    display: block;
+    height: 220px;
+		width: 220px;
+  }
+
+
+
 /*Custom */
 
 .table-wrapper {
