--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,4 +1,4 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 
 {% block body %}
 		<!-- Section One -->
@@ -73,27 +73,27 @@
 			<div class="wrapper style5">
 				<section id="team" class="container">
 					<header class="major">
-						<h2>Cras vitae metus aliNuam</h2>
-						<span class="byline">pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu</span>
+						<h2>Actores</h2>
+						<span class="byline">Los involucrados dentro del proceso</span>
 					</header>
 					<div class="row">
 						<div class="3u">
-							<a href="#" class="image"><img src="{{ url_for('static', filename='images/placeholder.png') }}" alt=""></a>
-							<h3>Molly Millions</h3>
+							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/productor.png') }}" alt=""></a>
+							<h3>Productores</h3>
 							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
 						</div>
 						<div class="3u">
-							<a href="#" class="image"><img src="{{ url_for('static', filename='images/placeholder.png') }}" alt=""></a>
+							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/placeholder.png') }}" alt=""></a>
 							<h3>Henry Dorsett Case</h3>
 							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
 						</div>
 						<div class="3u">
-							<a href="#" class="image"><img src="{{ url_for('static', filename='images/placeholder.png') }}" alt=""></a>
+							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/placeholder.png') }}" alt=""></a>
 							<h3>Willis Corto</h3>
 							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
 						</div>
 						<div class="3u">
-							<a href="#" class="image"><img src="{{ url_for('static', filename='images/placeholder.png') }}" alt=""></a>
+							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/produc.jpg') }}" alt="holaaa"></a>
 							<h3>Linda Lee</h3>
 							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
 						</div>
