--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -34,7 +34,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1><a href="#" id="logo">Info rural</a></h1>
+							<h1><a href="#" id="logo">Maipin Qhatu</a></h1>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -113,7 +113,7 @@
 
 			<!-- Copyright -->
 				<div id="copyright">
-					Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+					Diseno Juan Frisancho <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
 				</div>
 		</div>
 
