--- a/project/templates/main.html
+++ b/project/templates/main.html
@@ -80,22 +80,22 @@
 						<div class="3u">
 							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/productor.png') }}" alt=""></a>
 							<h3>Productores</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+							<p>Los productores son los principales involucrados dentro del sistema.</p>
+						</div>
+						<div class="3u">
+							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/produc.jpg') }}" alt=""></a>
+							<h3>Intermediarios</h3>
+							<p>Los intermediarios dentro de la cadena de suministro.</p>
 						</div>
 						<div class="3u">
 							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/placeholder.png') }}" alt=""></a>
-							<h3>Henry Dorsett Case</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
-						</div>
-						<div class="3u">
-							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/placeholder.png') }}" alt=""></a>
-							<h3>Willis Corto</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+							<h3>Estado</h3>
+							<p>El estado provee una plataforma de desarrollo para los involucrados.</p>
 						</div>
 						<div class="3u">
 							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/produc.jpg') }}" alt="holaaa"></a>
-							<h3>Linda Lee</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+							<h3>Familias</h3>
+							<p>El precio de los productos.</p>
 						</div>
 					</div>
 				</section>
