--- a/project/templates/mercados/mercados.html
+++ b/project/templates/mercados/mercados.html
@@ -27,7 +27,7 @@
 
 											<td>{{ mercado.Nombre }}</td>
 											<td>{{ mercado.Capacidad }}</td>
-											<td>{{ mercado.Ciudad_idCiudad }}</td>
+											<td>{{ mercado.Ciudad }}</td>
 											<td>
 												<ul class="tabla">
 												<li><a href="/mercados/edit/{{ mercado.Id}}" class="fa fa-pencil"></a></li>
