--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -101,6 +101,13 @@
 						<p>{% if current_user.is_authenticated %} Bienvenido {{ current_user.nombre }} {{ current_user.apellido }}! {% endif %}
 							El lugar que te permite encontrar la informacion del mercado que buscas</p>
 					</section>
+					{% if messages %}
+				    <ul class=flashes>
+				    {% for message in messages %}
+				      <li>{{ message }}</li>
+				    {% endfor %}
+				    </ul>
+				  {% endif %}
 				</div>
 
 			</div>
