Cambios en clima api para guardar informacion, un poco de manejo de admin

--- a/project/templates/manager/profile.html
+++ b/project/templates/manager/profile.html
@@ -6,7 +6,7 @@
   <section class="container">
     <header class="major">
       <h2>Estimado Administrador </h2>
-      <span class="byline">Estas sus datos.</span>
+      <span class="byline">Estos sus datos.</span>
     </header>
     <div class="row flush">
       <div class="4u">
