--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -72,14 +72,20 @@
 									</li>
 									<li><a href="/dep">Departamentos</a></li>
 									<li><a href="/prov2">Noticias</a></li>
-									<li><a href="right-sidebar.html">Clima</a></li>
-									{% if current_user.is_authenticated %}
+
+									<li><a href="{{ url_for('climas') }}">Clima</a></li>
+									
+
+									{% if current_user.role == "admin" %}
 									<li><a href="{{ url_for('managers') }}">Encuestadores</a></li>
+									{% endif %}
+									{% if current_user.is_authenticated %}
 									<li><a href="{{ url_for('mercados') }}">Mercados</a></li>
 									<li><a href="">Precio</a></li>
 									<li><a href="{{ url_for('profile') }}">{{ current_user.nombre }} {{ current_user.apellido }}</a>
 										<ul>
 											<li><a href="{{ url_for('profile') }}">Datos</a></li>
+											<li><a href="{{ url_for('profile') }}"> {{ current_user.role }}</a></li>
 											<li><a href="{{ url_for('logout') }}">Log out</a></li>
 										</ul>
 									</li>
