--- a/project/templates/ciudades.html
+++ b/project/templates/ciudades.html
@@ -5,11 +5,13 @@
 <div class="wrapper style2">
 				<section class="container">
           <h3>Ciudades de {{ provincia }} </h3>
+					{% if current_user.is_authenticated %}
 					<ul class="add">
 						<li><a href="{{ url_for('provincias', dep_id = provincia.Departamento_idDepartamento) }}"class="fa fa-arrow-left"><span>Atras</span></a></li>
 						<li><a href="{{ url_for('update_latlog_prov', prov_id = provincia.idProvincia) }}"class="fa fa-location-arrow"><span>Agregar Locations</span></a></li>
+						<li><a href="{{ url_for('update_clima_prov', prov_id = provincia.idProvincia) }}"class="fa fa-sun-o"><span>Agregar Locations</span></a></li>
 					</ul>
-
+					{% endif %}
           <br>
 
 							<div class="table-wrapper">
@@ -20,7 +22,9 @@
 											<th>Nombre</th>
 											<th>Latitud</th>
                       <th>Longitud</th>
-                      <th>Editar / Ubicacion</th>
+											{% if current_user.is_authenticated %}
+                      	<th>Editar / Ubicacion</th>
+											{% endif %}
 										</tr>
 									</thead>
 									<tbody>
@@ -32,9 +36,15 @@
 											<td>{{ region.Nombre }}</td>
                       <td>{{ region.Latitud }}</td>
 											<td>{{ region.Longitud }}</td>
-											<td><ul class="tabla">
-											<li><a href="{{ url_for('edit_ciudad', ciudad_id = region.Id ) }}" class="fa fa-pencil"></a></li>
-											<li><a href="{{ url_for('update_latlog', ciudad_id = region.Id ) }}" class="fa fa-location-arrow"></a></li></ul></td>
+											{% if current_user.is_authenticated %}
+											<td>
+												<ul class="tabla">
+													<li><a href="{{ url_for('edit_ciudad', ciudad_id = region.Id ) }}" class="fa fa-pencil"></a></li>
+													<li><a href="{{ url_for('update_latlog', ciudad_id = region.Id ) }}" class="fa fa-location-arrow"></a></li>
+													<li><a href="{{ url_for('update_clima', ciudad_id = region.Id ) }}" class="fa fa-sun-o"></a></li>
+												</ul>
+											</td>
+											{% endif %}
                     </tr>
                     {% endfor %}
 
