--- a/project/templates/climas/climas.html
+++ b/project/templates/climas/climas.html
@@ -29,7 +29,7 @@
                     {% for clima in climas %}
                     <tr>
 
-											<td><img src="http://openweathermap.org/img/w/{{ clima.Icono }}.png" ></td>
+											<td><img src="/static/images/weather/{{ clima.Icono }}.png" ></td>
 											<td>{{ clima.Fecha }}</td>
 											<td>{{ clima.Hora }}</td>
 											<td>{{ clima.Ciudad }}</td>
