--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -71,7 +71,7 @@
 										</ul>
 									</li>
 									<li><a href="{{ url_for('departament') }}">Departamentos</a></li>
-									<li><a href="/prov2">Noticias</a></li>
+									<li><a href="{{ url_for('noticias') }}">Noticias</a></li>
 
 									<li><a href="{{ url_for('climas') }}">Clima</a></li>
 
