--- a/project/templates/main.html
+++ b/project/templates/main.html
@@ -78,22 +78,22 @@
 					</header>
 					<div class="row">
 						<div class="3u">
-							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/productor.png') }}" alt=""></a>
+							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/noticias/productor.jpg') }}" alt=""></a>
 							<h3>Productores</h3>
 							<p>Los productores son los principales involucrados dentro del sistema.</p>
 						</div>
 						<div class="3u">
-							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/produc.jpg') }}" alt=""></a>
+							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/noticias/produc.jpg') }}" alt=""></a>
 							<h3>Intermediarios</h3>
 							<p>Los intermediarios dentro de la cadena de suministro.</p>
 						</div>
 						<div class="3u">
-							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/placeholder.png') }}" alt=""></a>
+							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/noticias/planta1.jpg') }}" alt=""></a>
 							<h3>Estado</h3>
 							<p>El estado provee una plataforma de desarrollo para los involucrados.</p>
 						</div>
 						<div class="3u">
-							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/produc.jpg') }}" alt="holaaa"></a>
+							<a href="#" class="image cuadro"><img src="{{ url_for('static', filename='images/noticias/quinuabag.jpg') }}" alt="holaaa"></a>
 							<h3>Familias</h3>
 							<p>El precio de los productos.</p>
 						</div>
