clima api super genial

--- a/project/templates/manager/registro.html
+++ b/project/templates/manager/registro.html
@@ -5,7 +5,7 @@
 
   <div class="wrapper style4">
     <section class="container">
-      <h1> Crear nuevo administrador </h1>
+      <h1> Crear nuevo encuestador </h1>
       <form method="POST" class="form-control" action="register" accept-charset="UTF-8" role="form">
         {{ form.csrf_token }}
         {% for field in form %}
